welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Unit
 required: Int
  if(num<=20){
  ^